# ProjetCloud_23-24

./: .gitignore  README.md  anomaly_detection.py  app.py  dashboard.py  docker-compose.yaml  dockerfile  makefile  prometheus-config.yaml  prometheus-pv.yaml  prometheus.yaml  prometheus.yml  pyproject.toml
app/: Dockerfile  app.py
dashboard/: Dockerfile  dashboard.py
data/: sensor_data.db
deployment/: app-deployment.yaml  dashboard-deployment.yaml  flask-deployment.yaml  prometheus-deployment.yaml  sensor1-deployment.yaml  sensor2-deployment.yaml  sensor3-deployment.yaml  sensor4-deployment.yaml  sensor5-deployment.yaml  sensor6-deployment.yaml  sensor7-deployment.yaml  sensor8-deployment.yaml  sensorcustom-deployment.yaml
instance/: sensor_data.db
service/: app-service.yaml  dashboard-service.yaml  flask-service.yaml  grafana-service.yaml  prometheus-service.yaml  sensor1-service.yaml  sensor2-service.yaml  sensor3-service.yaml  sensor4-service.yaml  sensor5-service.yaml  sensor6-service.yaml  sensor7-service.yaml  sensor8-service.yaml  sensorcustom-service.yaml
