[tool.poetry]
name = "basics"
version = "0.1.0"
description = ""
authors = ["Benoît Catez <benoit.catez@epita.fr~>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.33.0"
Flask = "^3.0.3"
requests = "^2.31.0"
docker = "^7.0.0"
flask-sqlalchemy = "^3.1.1"
msgpack = "^1.0.8"
scikit-learn = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
